Update - Update admin/events

--- a/app/views/admin/common/_nav.html.slim
+++ b/app/views/admin/common/_nav.html.slim
@@ -9,3 +9,8 @@ nav#px-demo-nav.px-nav.px-nav-left
         i.px-nav-icon.ion-ios-pulse-strong
         span.px-nav-label
           = t('dashboard')
+    li.px-nav-item
+      = link_to admin_events_path do
+        i.px-nav-icon.ion-ios-pulse-strong
+        span.px-nav-label
+          = t('event')
