--- a/app/views/admin/common/_breadcrumb.html.slim
+++ b/app/views/admin/common/_breadcrumb.html.slim
@@ -9,9 +9,7 @@
 
 .page-header
   .pull-left
-      h1
-        = headers[:title]
-  - Rails.logger.debug { " -- #{headers.to_json}" }
+    h1= headers[:title]
   - if headers[:right_title].present?
     .pull-right
       = link_to headers[:right_title][:title], headers[:right_title][:link], class: 'btn btn-primary btn-flat'
