--- a/app/views/admin/events/_form.html.slim
+++ b/app/views/admin/events/_form.html.slim
@@ -3,7 +3,7 @@
     .panel-heading
       span.panel-title= t('simple_form.labels.event.info')
     .panel-body
-      == f.input :url_name, required: true
+      == f.input :link_name, required: true
       == f.input :title, required: true
       == f.input :desc, required: false
 
