--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -7,7 +7,8 @@
       == f.input :url, required: true, as: :url
       == f.input :banner, as: :file
       - if product.banner.present?
-        == image_tag product.banner
+        == link_to product.banner.url, target: '_blank' do
+          == image_tag product.banner.small, class: 'img-thumbnail'
 
   br/
   .row
