--- a/app/views/layouts/paralax.html.erb
+++ b/app/views/layouts/paralax.html.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
-    <title>Hawa</title>
+  <%= display_meta_tags %>
+  <%= analytics_init if GoogleAnalytics.valid_tracker? %>
 
-    <%= stylesheet_link_tag  'paralax', media: 'all' %>
-
+  <%= stylesheet_link_tag  'paralax', media: 'all' %>
 </head>
-<body>
+<body class="animsition">
   <%= render 'paralax_common/loading' %>
   <%= render 'paralax_common/header' %>
 
