--- a/app/views/admin/common/_nav.html.slim
+++ b/app/views/admin/common/_nav.html.slim
@@ -4,11 +4,11 @@ nav#px-demo-nav.px-nav.px-nav-left
     span.navbar-toggle-icon
     span.px-nav-toggle-label.font-size-11 HIDE MENU
   ul.px-nav-content
-    li.px-nav-item
-      = link_to admin_root_path do
-        i.px-nav-icon.ion-ios-pulse-strong
-        span.px-nav-label
-          = t('dashboard')
+    / li.px-nav-item
+    /   = link_to admin_root_path do
+    /     i.px-nav-icon.ion-ios-pulse-strong
+    /     span.px-nav-label
+    /       = t('dashboard')
     li.px-nav-item
       = link_to admin_events_path do
         i.px-nav-icon.ion-ios-pulse-strong
