--- a/app/views/home/_top_recommend.html.slim
+++ b/app/views/home/_top_recommend.html.slim
@@ -20,46 +20,12 @@
       /         button.but data-filter=".home2-3"  Websites
       /       li.filter-item
       /         button.but data-filter=".home2-4"  Print
-      / .row.hawa-portfolio-content.pc.popup-gallery.hawa_grid_title
-      /   .portfolio-item.pi.item-337.col-sm-4.home2-1
-      /     img.bg-responsive-img.item-img.wp-post-image alt="Untitled-1" height="454" src="img/Untitled-1-9.jpg" width="634" /
-      /     .layer
-      /       a.animsition-link data-effect="zoomIn" href="#"
-      /         span.icon-item.icon-attachment
-      /       h4.item-title Sleek modern
-      /       h4.item-category BRANDING
-      /   .portfolio-item.pi.item-338.col-sm-4.home2-2
-      /     img.bg-responsive-img.item-img.wp-post-image alt="Untitled-12" height="454" src="img/Untitled-12-7.jpg" width="634" /
-      /     .layer
-      /       a.animsition-link data-effect="zoomIn" href="#"
-      /         span.icon-item.icon-attachment
-      /       h4.item-title Sleek modern
-      /       h4.item-category PHOTOGRAPHY
-      /   .portfolio-item.pi.item-339.col-sm-4.home2-3
-      /     img.bg-responsive-img.item-img.wp-post-image alt="Untitled-13" height="454" src="img/Untitled-13-5.jpg" width="633" /
-      /     .layer
-      /       a.animsition-link data-effect="zoomIn" href="#"
-      /         span.icon-item.icon-attachment
-      /       h4.item-title Sleek modern
-      /       h4.item-category WEBSITES
-      /   .portfolio-item.pi.item-340.col-sm-4.home2-4
-      /     img.bg-responsive-img.item-img.wp-post-image alt="Untitled-14" height="454" src="img/Untitled-14-4.jpg" width="634" /
-      /     .layer
-      /       a.animsition-link data-effect="zoomIn" href="#"
-      /         span.icon-item.icon-attachment
-      /       h4.item-title Sleek modern
-      /       h4.item-category PRINT
-      /   .portfolio-item.pi.item-341.col-sm-4.home2-1
-      /     img.bg-responsive-img.item-img.wp-post-image alt="Untitled-15" height="454" src="img/Untitled-15-3.jpg" width="634" /
-      /     .layer
-      /       a.animsition-link data-effect="zoomIn" href="#"
-      /         span.icon-item.icon-attachment
-      /       h4.item-title Sleek modern
-      /       h4.item-category BRANDING
-      /   .portfolio-item.pi.item-342.col-sm-4.home2-2
-      /     img.bg-responsive-img.item-img.wp-post-image alt="Untitled-16" height="454" src="img/Untitled-16-1.jpg" width="633" /
-      /     .layer
-      /       a.animsition-link data-effect="zoomIn" href="#"
-      /         span.icon-item.icon-attachment
-      /       h4.item-title Sleek modern
-      /       h4.item-category PHOTOGRAPHY
+      .row.hawa-portfolio-content.pc.popup-gallery.hawa_grid_title
+        - events.each do |event|
+          .portfolio-item.pi.item-337.col-sm-4.home2-1
+            = link_to event_path(event.link_name), class: 'animsition-link', 'data-effect': 'zoomIn' do
+              == image_tag event.image.small, alt: event.title, class: 'bg-responsive-img item-img wp-post-image'
+              .layer
+                span.icon-item.icon-attachment
+                h4.item-title= event.title
+                / h4.item-category BRANDING
