Refine - Refine homepage meta

--- a/app/views/common/_header.html.slim
+++ b/app/views/common/_header.html.slim
@@ -4,6 +4,7 @@ header.hawa-main-header.sticky-header.animsition.hawa-show-menu.dark
       .col-md-12.top-header
         .hawa-logo
           a href="home-main.html"= t('title')
+          h1.hide= t('title')
         .hawa-navigation.width-nav
           /! SITE MENU
           nav
