--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+  <%= render partial: 'common/favicon' %>
 
   <%= display_meta_tags %>
   <%= analytics_init if GoogleAnalytics.valid_tracker? %>
