Refine - Refine loading pic

--- a/app/views/layouts/paralax.html.erb
+++ b/app/views/layouts/paralax.html.erb
@@ -12,7 +12,7 @@
   <%= stylesheet_link_tag  'paralax', media: 'all' %>
 </head>
 <body class="animsition">
-  <%= render 'paralax_common/loading' %>
+  <%= render 'common/loading' %>
   <%= render 'paralax_common/header' %>
 
   <%= yield %>
