Refine - Refine font style

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@
 //= require hawa/prettyPhoto
 
 @import "font-awesome";
-
+@import "fonts";
 
 .bg_one_page_text_ticker {
   background-image: image-url('banner.jpg');
