Fix - Fix footer

--- a/app/views/common/_footer.html.slim
+++ b/app/views/common/_footer.html.slim
@@ -1,4 +1,4 @@
-footer.main-footer.hawa-light-footer data-src="http://multia.in/theme/hawa/img/footer-bg.jpg"
+footer.main-footer.hawa-light-footer
   .container
     .row
       .col-md-12
