--- a/app/views/layouts/paralax.html.erb
+++ b/app/views/layouts/paralax.html.erb
@@ -17,7 +17,7 @@
 
   <%= yield %>
 
-  <%= render 'paralax_common/footer' %>
+  <%= render 'common/footer' %>
 
   <%= javascript_include_tag 'paralax' %>
 </body>
