Refine - Refine banner jpg

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,5 +17,5 @@
 @import "fonts";
 
 .bg_one_page_text_ticker {
-  background-image: image-url('banner.jpg');
+  background-image: image-url('banner.gz.jpg');
 }
