--- a/app/views/common/_header.html.slim
+++ b/app/views/common/_header.html.slim
@@ -3,7 +3,7 @@ header.hawa-main-header.sticky-header.animsition.hawa-show-menu.dark
     .row
       .col-md-12.top-header
         .hawa-logo
-          a href="home-main.html"= t('title')
+          == link_to t('title'), root_path
           h1.hide= t('title')
         .hawa-navigation.width-nav
           /! SITE MENU
