--- a/app/views/admin/common/_header.html.slim
+++ b/app/views/admin/common/_header.html.slim
@@ -1,7 +1,7 @@
 nav.navbar.px-navbar
   /! Header
   .navbar-header
-    a.navbar-brand.px-demo-brand href="index.html"
+    == link_to root_path, class: 'navbar-brand px-demo-brand' do
       span.px-demo-logo.bg-primary
         span.px-demo-logo-1
         span.px-demo-logo-2
