--- a/app/views/admin/events/_form.html.slim
+++ b/app/views/admin/events/_form.html.slim
@@ -1,4 +1,4 @@
-== simple_form_for([:admin, event]) do |f|
+== simple_form_for([:admin, event], html: { autocomplete: 'off' }) do |f|
   .panel.colourable
     .panel-heading
       span.panel-title= t('simple_form.labels.event.info')
