--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -56,7 +56,7 @@
                 = event.keywords
             tr
               td.col-md-4
-                = t('simple_form.labels.event.title')
+                = t('simple_form.labels.event.image_abbr')
               td.col-md-8
                 == link_to event.image.url, target: '_blank' do
                   == image_tag event.image.small, class: 'img-thumbnail'
