Refine - Refine event page

--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -21,3 +21,18 @@
 .bg-gofun {
   background-color: #FFFFFB;
 }
+
+.event_product {
+  .titles {
+    h2 {
+      color: #546E7A;
+      text-shadow: rgba(12, 12, 12, 0.31) 4px 4px 4px;
+      letter-spacing: 10px;
+    }
+
+    p {
+      color: #546E7A;
+      margin: 10px 400px;
+    }
+  }
+}
