Add - Add product banner style to event page and admin/product

--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -22,7 +22,7 @@
   background-color: #FFFFFB;
 }
 
-.event_product {
+.event_product.dark .hawa-banner .content {
   .titles {
     h2 {
       color: #546E7A;
