Refine - Refine event style

--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -28,6 +28,7 @@
       color: #546E7A;
       text-shadow: rgba(12, 12, 12, 0.31) 4px 4px 4px;
       letter-spacing: 10px;
+      font-size: 72px;
     }
 
     p {
