Refine - Refine admin/event

--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -39,6 +39,10 @@
               td.col-md-4
                 = t('simple_form.labels.event.created_at')
               td.col-md-8= l event.created_at, format: :ymds
+            tr
+              td.col-md-4
+                = t('simple_form.labels.event.updated_at')
+              td.col-md-8= l event.updated_at, format: :ymds
 
   .col-md-12
     .panel.colourable
