--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -22,6 +22,12 @@
   background-color: #FFFFFB;
 }
 
+@media only screen and (max-width: 480px) {
+  .hawa-logo {
+    width: 125px;
+  }
+}
+
 .event_product.dark .hawa-banner .content {
   .titles {
     h2 {
@@ -33,7 +39,23 @@
 
     p {
       color: #546E7A;
-      margin: 10px 400px;
+      margin: 10px 10%;
+    }
+  }
+}
+
+
+@media only screen and (max-width: 480px) {
+  .event_product.dark .hawa-banner .content {
+    .titles {
+      h2 {
+        letter-spacing: 0;
+        margin-bottom: 20px;
+      }
+
+      p {
+        font-size: 16px;
+      }
     }
   }
 }
