Refine - Refine header path

--- a/app/views/paralax_common/_header.html.slim
+++ b/app/views/paralax_common/_header.html.slim
@@ -3,5 +3,5 @@ header.hawa-main-header.sticky-header.animsition.hawa-show-menu.dark
     .row
       .col-md-12.top-header
         .hawa-logo
-          a href="#" 94 Crazy
+          == link_to t('title'), root_path
 
