Refine - Refine paralax style

--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -67,3 +67,16 @@
     }
   }
 }
+
+
+@media (max-width: 1025px) {
+  .hawa-banner .content .buttons-buttom {
+    display: block;
+  }
+}
+
+@media (max-width: 480px) {
+  .hawa-banner .content .buttons-buttom a {
+    display: block;
+  }
+}
