Add - Add Mixpanel track

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -19,4 +19,4 @@
             br/
             p= product.desc
           .buttons-buttom
-            = link_to t('helpers.buy'), product.url, class: 'black white', target: '_blank'
+            = link_to t('helpers.buy'), product.url, class: 'black white goto_buy', target: '_blank'
