--- a/app/views/admin/common/_header.html.slim
+++ b/app/views/admin/common/_header.html.slim
@@ -25,8 +25,13 @@ nav.navbar.px-navbar
         ul.dropdown-menu
           li.divider
           li
+            = link_to admin_edit_passwords_path do
+              i.dropdown-icon.fa.fa-lock
+              | &nbsp;&nbsp;
+              = t('helpers.password_change')
+          li
             = link_to destroy_admin_session_path, method: :delete do
               i.dropdown-icon.fa.fa-power-off
               | &nbsp;&nbsp;
-              = t('helpers.sign_out')
+              = t('sign_out')
       /! /.navbar-collapse
