--- a/app/views/common/_footer.html.slim
+++ b/app/views/common/_footer.html.slim
@@ -1,30 +1,30 @@
 /! FOOTER
-footer.background-grey
+footer.background-dark.text-grey
   .footer-content
     .container
       .row.text-center
-        == image_tag 'logos/logo@64.png', alt: t('title')
+        == image_tag 'logos/logo-white@64.png', alt: t('title')
         .copyright-text.text-center
           | © 2017. All right reserved. Created by 94Crazy.
           a href="http://www.inspiro-media.com" target="_blank"  INSPIRO
         / .social-icons.center
         /   ul
         /     li.social-facebook
-        /       a href="#" 
+        /       a href="#"
         /         i.fa.fa-facebook
         /     li.social-twitter
-        /       a href="#" 
+        /       a href="#"
         /         i.fa.fa-twitter
         /     li.social-google
-        /       a href="#" 
+        /       a href="#"
         /         i.fa.fa-google-plus
         /     li.social-pinterest
-        /       a href="#" 
+        /       a href="#"
         /         i.fa.fa-pinterest
         /     li.social-vimeo
-        /       a href="#" 
+        /       a href="#"
         /         i.fa.fa-vimeo-square
         /     li.social-linkedin
-        /       a href="#" 
+        /       a href="#"
         /         i.fa.fa-linkedin
 /! END: FOOTER
