Fix - Fix home background-pattern image

--- a/app/views/home/_section.html.slim
+++ b/app/views/home/_section.html.slim
@@ -1,4 +1,4 @@
-section.background-grey.p-t-100.p-b-80 style="background-image:url('http://www.inspirothemes.com/polo-v2/images/pattern/pattern19.png');"
+section.background-grey.p-t-100.p-b-80 style="background-image:url('#{asset_path('background-pattern.png')}');"
   .container.xs-text-center.sm-text-center
     .row
       .col-md-9.p-b-40
