Reifne - Refine home desc

--- a/app/views/home/_section.html.slim
+++ b/app/views/home/_section.html.slim
@@ -3,7 +3,7 @@ section.background-grey.p-t-100.p-b-80 style="background-image:url('#{asset_path
     .row
       .col-md-9.p-b-40
         h2.m-b-20 為你準備了
-        p.lead 透過我們精準的預測，以及各大Blog推薦，為你準備了絕對不可以錯過的必買商品，種類多達3000多件，所有你需要的商品清單全都在這裡!!
+        p.lead 透過我們專業的行銷團隊以及各大Blog推薦，為你準備了絕對不可以錯過的必買商品，種類多達3000多件，所有你需要的商品清單全都在這裡!!
       .col-md-3
         .text-center
           .counter.text-large
