Refine - Refine home, admin/product

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,3 +14,24 @@
 
 @import "font-awesome";
 @import "fonts";
+
+
+#home {
+  #slider {
+    h2 span {
+      font-size: 42px;
+    }
+
+    @media (max-width: 991px) {
+      h2 span {
+        font-size: 34px;
+      }
+    }
+
+    @media (max-width: 767px) {
+      h2 span {
+        font-size: 22px;
+      }
+    }
+  }
+}
