--- a/app/views/common/_slider.html.slim
+++ b/app/views/common/_slider.html.slim
@@ -6,7 +6,9 @@
     .container
       .slide-captions.m-b-200.text-center.text-dark
         /! Captions
-        h2 94Crazy 就是要推薦你
+        h2
+          | 94Crazy&nbsp;&nbsp;
+          span 就是要推薦你
         p
         /! End: Captions
   /! END: Slide 1
