--- a/app/views/admin/products/show.html.slim
+++ b/app/views/admin/products/show.html.slim
@@ -26,7 +26,7 @@
                   = product.url.truncate(80)
             tr
               td.col-md-2
-                = t('simple_form.labels.product.banner')
+                = t('simple_form.labels.product.banner_abbr')
               td.col-md-10
                 == link_to product.banner.url, target: '_blank' do
                   == image_tag product.banner.small, class: 'img-thumbnail'
