Add - Add backend resources infos

--- a/app/views/admin/common/_nav.html.slim
+++ b/app/views/admin/common/_nav.html.slim
@@ -14,3 +14,8 @@ nav#px-demo-nav.px-nav.px-nav-left
         i.px-nav-icon.ion-ios-pulse-strong
         span.px-nav-label
           = t('event')
+    li.px-nav-item
+      = link_to admin_infos_path do
+        i.px-nav-icon.ion-ios-paper
+        span.px-nav-label
+          = t('info')
