Refine - Refine parallax page

--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -19,3 +19,47 @@
 .text-right .heading:after {
   float: right;
 }
+
+.right_side {
+  @media (max-width: 991px) {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
+
+    & > div:first-child {
+      -webkit-box-ordinal-group: 2;
+      -moz-box-ordinal-group: 2;
+      box-ordinal-group: 2;
+    }
+    & > div:last-child {
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      box-ordinal-group: 1;
+    }
+  }
+
+  @media (max-width: 767px) {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
+
+    & > div:first-child {
+      -webkit-box-ordinal-group: 2;
+      -moz-box-ordinal-group: 2;
+      box-ordinal-group: 2;
+    }
+    & > div:last-child {
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      box-ordinal-group: 1;
+    }
+  }
+}
