Refine - Refine admin/dashboard

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -8,3 +8,10 @@
         ul.list-inline
           li
             == link_to t('event'), admin_events_path
+  .col-md-6
+    .panel.colourable
+      .panel-body
+        h2.has-divider.text-highlight= t('info')
+        ul.list-inline
+          li
+            == link_to t('info'), admin_infos_path
