Refine - Refine google fonts link

--- a/app/views/layouts/sign_in.html.erb
+++ b/app/views/layouts/sign_in.html.erb
@@ -11,7 +11,7 @@
 
   <%= favicon_link_tag 'favicon.ico' %>
   <!-- Open Sans font from Google CDN -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin" rel="stylesheet" type="text/css">
 
   <%= stylesheet_link_tag 'sign_in', media: 'all' %>
   <%= csrf_meta_tags %>
