--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,7 +11,7 @@
   <%= analytics_init if GoogleAnalytics.valid_tracker? %>
 
   <!-- LOAD GOOGLE FONTS -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
 
   <%= stylesheet_link_tag  'home', media: 'all' %>
 </head>
