--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -95,7 +95,7 @@
                       = t('helpers.show')
                     = link_to edit_admin_event_product_path(event, product), class: 'btn btn-xs btn-info btn-3d' do
                       = t('helpers.edit')
-                    = link_to admin_event_product_path(product), method: :delete, data: {confirm: t('helpers.are_you_sure')}, class: 'btn btn-xs btn-danger btn-3d' do
+                    = link_to admin_event_product_path(event, product), method: :delete, data: {confirm: t('helpers.are_you_sure')}, class: 'btn btn-xs btn-danger btn-3d' do
                       = t('helpers.delete')
                 td.text-center= product.name
                 td.text-center= product.url.truncate(80)
