Refine - 增加誤刪的警示，Refine Product add/edit/destroy UX

--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -70,7 +70,7 @@
                 == link_to event.meta.image.url, target: '_blank' do
                   == image_tag event.meta.image.small, class: 'img-thumbnail'
 
-  .col-md-12
+  #products.col-md-12
     .panel.colourable
       /! Default panel contents
       .panel-heading
