Refine - Refine style

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -15,7 +15,7 @@
 
   <%= stylesheet_link_tag  'home', media: 'all' %>
 </head>
-<body id="home" class="wide" data-animation-icon-path="/images/">
+<body id="homepage" class="wide" data-animation-icon-path="/images/">
   <!-- WRAPPER -->
   <div class="wrapper">
     <%= render 'common/header' %>
